Assignment 1 done pending accuracy improvements

--- a/Assignment 1/problem_1_DT.ipynb
+++ b/Assignment 1/problem_1_DT.ipynb
@@ -31,26 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "id": "YNuNyRTRxqRQ"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\shubh\\AppData\\Local\\Temp\\ipykernel_20124\\2254582464.py:2: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -86,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "id": "MEWF9igrXoYg"
    },
@@ -143,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "Re8M_XaJrJoF"
    },
@@ -159,7 +144,19 @@
     "        Entropy.\n",
     "    \"\"\"\n",
     "    # ===== YOUR CODE HERE =====\n",
+    "    unique_labels = dict()\n",
     "\n",
+    "    for label in labels_list:\n",
+    "        unique_labels[label] = unique_labels.get(label,0) + 1\n",
+    "    \n",
+    "    all_labels_len = len(labels_list)\n",
+    "    p = [unique_labels[x]/all_labels_len for x in unique_labels.keys() ]\n",
+    "\n",
+    "    ret = 0\n",
+    "    for x in p:\n",
+    "        ret+= x * np.log2(x)\n",
+    "    \n",
+    "    return -ret\n",
     "    # ==========================\n",
     "\n",
     "\n",
@@ -173,6 +170,19 @@
     "        Gini impurity.\n",
     "    \"\"\"\n",
     "    # ===== YOUR CODE HERE =====\n",
+    "    unique_labels = dict()\n",
+    "\n",
+    "    for label in labels_list:\n",
+    "        unique_labels[label] = unique_labels.get(label,0) + 1\n",
+    "    \n",
+    "    all_labels_len = len(labels_list)\n",
+    "    p = [unique_labels[x]/all_labels_len for x in unique_labels.keys() ]\n",
+    "\n",
+    "    ret = 1\n",
+    "    for x in p:\n",
+    "        ret -= x*x\n",
+    "    \n",
+    "    return ret\n",
     "\n",
     "    # ==========================\n",
     "\n",
@@ -195,7 +205,19 @@
     "        Information gain or the Gini impurity decrease based on the mode.\n",
     "    \"\"\"\n",
     "    # ===== YOUR CODE HERE =====\n",
+    "    parent_value  = 0\n",
+    "    l_child_value = 0\n",
+    "    r_child_value = 0\n",
+    "    if mode == 'entropy':\n",
+    "        parent_value = entropy(parent_labels)\n",
+    "        l_child_value = entropy(l_child_labels)\n",
+    "        r_child_value = entropy(r_child_labels)\n",
+    "    elif mode == 'gini':\n",
+    "        parent_value = gini_impurity(parent_labels)\n",
+    "        l_child_value = gini_impurity(l_child_labels)\n",
+    "        r_child_value = gini_impurity(r_child_labels)\n",
     "\n",
+    "    return parent_value - ((len(l_child_labels) * l_child_value + len(r_child_labels) * r_child_value) / len(parent_labels))\n",
     "    # =========================="
    ]
   },
@@ -217,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "nx3mnMYQ3eqv"
    },
@@ -271,13 +293,28 @@
     "\n",
     "        # Loop over all the feature values present in the data.\n",
     "        for threshold in possible_threshold:\n",
-    "            ...\n",
     "            # 1. Get the current split.\n",
     "            # 2. Enusre that both splits are not empty.\n",
     "            # 3. Compute information gain.\n",
     "            # 4. Update the best split if information gain is higher.\n",
     "\n",
     "            # ===== YOUR CODE HERE =====\n",
+    "            l , r = _split(dataset,feature_index,threshold)\n",
+    "\n",
+    "            if len(l) == 0 or len(r) == 0:\n",
+    "                continue\n",
+    "            \n",
+    "            cur_info = information_gain(dataset[:,-1], l[:,-1], r[:,-1], split_mode)\n",
+    "\n",
+    "            if cur_info > max_info_gain:\n",
+    "                best_split = {\n",
+    "                    \"feature_index\": feature_index,\n",
+    "                    \"threshold\": threshold,\n",
+    "                    \"dataset_left\": l,\n",
+    "                    \"dataset_right\": r,\n",
+    "                    \"info_gain\": cur_info,\n",
+    "                }\n",
+    "                max_info_gain = cur_info\n",
     "\n",
     "            # ==========================\n",
     "\n",
@@ -306,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "AWC3IjlNAwHC"
    },
@@ -353,7 +390,7 @@
     "\n",
     "# Hyperparameters.\n",
     "MAX_DEPTH = 100\n",
-    "MIN_SAMPLE_SPLIT = 3\n",
+    "MIN_SAMPLE_SPLIT = 10\n",
     "\n",
     "\n",
     "def build_tree(dataset: np.array, split_mode: str, curr_depth: int = 0) -> Node:\n",
@@ -394,7 +431,18 @@
     "    # 4. Return the filled leaf node (in the form of a Node class)\n",
     "\n",
     "    # ===== YOUR CODE HERE =====\n",
+    "    if curr_depth > MAX_DEPTH or len(dataset) < MIN_SAMPLE_SPLIT:\n",
+    "        return Node(value= calculate_leaf_value(dataset[:,-1]))\n",
+    "    \n",
+    "    cur_best_split = find_best_split(dataset,dataset.shape[1]-1,split_mode)\n",
     "\n",
+    "    if cur_best_split['info_gain'] > 0:\n",
+    "        left = build_tree(cur_best_split['dataset_left'],split_mode,curr_depth+1)\n",
+    "        right = build_tree(cur_best_split['dataset_right'],split_mode,curr_depth+1)\n",
+    "\n",
+    "        return Node(cur_best_split['feature_index'],cur_best_split['threshold'],left,right,cur_best_split['info_gain'],None)\n",
+    "    else:\n",
+    "        return Node(value = calculate_leaf_value(dataset[:,-1]))\n",
     "    # =========================="
    ]
   },
@@ -409,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,9 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eyDkmigbGYJL"
-   },
+   "metadata": {},
    "source": [
     "## Prediction\n",
     "\n",
@@ -444,10 +490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "4oHM7jDyL8QP"
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predict(X: np.array, tree: Node) -> np.array:\n",
@@ -481,7 +525,13 @@
     "    # threshold at the current node till you reach a leaf node.\n",
     "\n",
     "    # ===== YOUR CODE HERE =====\n",
-    "\n",
+    "    if tree.value is not None:\n",
+    "        return tree.value\n",
+    "    \n",
+    "    if x[tree.feature_index] < tree.threshold:\n",
+    "        return make_prediction(x,tree.left)\n",
+    "    else:\n",
+    "        return make_prediction(x,tree.right)\n",
     "    # =========================="
    ]
   },
@@ -506,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -514,7 +564,17 @@
     "id": "bylmLfsbN7LE",
     "outputId": "bc18e33c-2df8-47fb-cd04-efd83c9a5c73"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gini: 3\n",
+      "Accuracy 0.7958333333333333\n",
+      "F1 0.8006509357200976\n"
+     ]
+    }
+   ],
    "source": [
     "def print_tree(tree, indent=\" \"):\n",
     "    \"\"\"function to print the tree\"\"\"\n",
@@ -543,7 +603,24 @@
     "# Predict the labels for X_test and compute the accuracy, F1 score w.r.t. Y_test.\n",
     "# Print the information asked in the above question.\n",
     "# ===== YOUR CODE HERE =====\n",
+    "from sklearn.metrics import f1_score,accuracy_score\n",
     "\n",
+    "tree_entropy = train(X_train,Y_train.reshape(-1,1),'entropy')\n",
+    "pred_entropy = predict(X_test,tree_entropy)\n",
+    "print(\"Entropy:\")\n",
+    "\n",
+    "# print_tree(tree_entropy)\n",
+    "print(\"Accuracy\",accuracy_score(Y_test,pred_entropy))\n",
+    "print(\"F1\",f1_score(Y_test,pred_entropy))\n",
+    "\n",
+    "MIN_SAMPLE_SPLIT = 3\n",
+    "\n",
+    "tree_gini = train(X_train,Y_train.reshape(-1,1),'gini')\n",
+    "pred_gini = predict(X_test,tree_gini)\n",
+    "print(\"Gini:\",MIN_SAMPLE_SPLIT)\n",
+    "# print_tree(tree_gini)\n",
+    "print(\"Accuracy\",accuracy_score(Y_test,pred_gini))\n",
+    "print(\"F1\",f1_score(Y_test,pred_gini))\n",
     "# =========================="
    ]
   },
@@ -566,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "9o8bFdzp8_ts"
    },
@@ -590,12 +667,14 @@
     "        List of tuples such that the tuple at index i contains the X, Y for bag i.\n",
     "    \"\"\"\n",
     "    bags = []\n",
+    "    input_len = len(train_input)\n",
     "\n",
     "    for i in range(num_bags):\n",
-    "        ...\n",
+    "        \n",
     "        # Sample with replacement and add them to a bag.\n",
     "        # ===== YOUR CODE HERE =====\n",
-    "\n",
+    "        index = np.random.choice(input_len,bag_size,replace=True)\n",
+    "        bags.append([train_input[index],train_label[index]])\n",
     "        # ==========================\n",
     "\n",
     "    return bags"
@@ -617,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "sHZbOIubEAMH"
    },
@@ -645,7 +724,8 @@
     "        # Train individual DTs with the `train` method from the decision tree problem and\n",
     "        # add them to the base_dts list.\n",
     "        # ===== YOUR CODE HERE =====\n",
-    "\n",
+    "        tree = train(bags[i][0],bags[i][1].reshape(-1,1),'gini')\n",
+    "        base_dts.append(tree)\n",
     "        # ==========================\n",
     "\n",
     "    return base_dts"
@@ -664,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "2x4odZHkJDpU"
    },
@@ -681,7 +761,16 @@
     "        Array containing the predicted class labels for all test inputs.\n",
     "    \"\"\"\n",
     "    # ===== YOUR CODE HERE =====\n",
+    "    base_predictions = np.array([],dtype=int)\n",
+    "    for base_dts in trained_base_dts:\n",
+    "        predictions = predict(test_input,base_dts)\n",
+    "        base_predictions = np.append(base_predictions,predictions)\n",
     "\n",
+    "    base_predictions = base_predictions.reshape(8,1200).transpose().astype(np.int64)\n",
+    "    final_out = []\n",
+    "    for i in range(len(test_input)):\n",
+    "        final_out.append(np.bincount(base_predictions[i]).argmax())\n",
+    "    return final_out\n",
     "    # =========================="
    ]
   },
@@ -700,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -708,18 +797,33 @@
     "id": "XMZ5hRRnpUya",
     "outputId": "3f852ef2-8f3a-418a-defd-81c289e95639"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.825\n",
+      "F1 0.8223350253807107\n"
+     ]
+    }
+   ],
    "source": [
     "# Hyperparameters. You can try different values for these.\n",
     "NUM_DTS = 5  # Number of decision trees.\n",
-    "BAG_SIZE = len(X_train)  # Size of the individual datasets for base decision trees.\n",
+    "BAG_SIZE = len(X_train) # Size of the individual datasets for base decision trees.\n",
     "\n",
     "# Call the train_base_dts to train a random forest.\n",
     "# Call predict_majority_voting functions to get the predictions.\n",
     "# Print the accuracy and F1 score (using either information gain or Gini impurity decrease\n",
     "# as the quality metric).\n",
     "# ===== YOUR CODE HERE =====\n",
+    "base_dts = train_base_dts(X_train,Y_train,num_dts=NUM_DTS,bag_size=BAG_SIZE)\n",
+    "predictions = predict_majority_voting(X_test,base_dts)\n",
     "\n",
+    "from sklearn.metrics import f1_score,accuracy_score\n",
+    "\n",
+    "print(\"Accuracy\",accuracy_score(Y_test,predictions))\n",
+    "print(\"F1\",f1_score(Y_test,predictions))\n",
     "# =========================="
    ]
   },
